Fix Server Name Indication extension configuration
The [Server Name Indication][wiki-sni] (SNI) [TLS
extension][rfc-5246-extensions] has become a de-facto client-side
requirement for TLS connections; most servers will abort connections
lacking the SNI extension.

Whilst Mbed TLS provides client-side support for SNI (via the
[MBEDTLS_SSL_SERVER_NAME_INDICATION][mbedtls-sni] option), the [ALTCP
compatible Mbed TLS port][lwip-altcp-tls] supplied with lwIP does not
provide an interface to correctly configure SNI. This is a [known
missing feature][gh-lwip-pr] of lwIP's ALTCP interface.

This commit adds a workaround to correctly configure the SNI extension.
This is achieved via underlying Mbed TLS interfaces, thereby avoiding
the need to patch lwIP.

Fixes marceloalcocer/picohttps#1

[wiki-sni]: https://en.wikipedia.org/wiki/Server_Name_Indication
[rfc-5246-extensions]: https://datatracker.ietf.org/doc/html/rfc5246#section-7.4.1.4
[mbedtls-sni]: https://github.com/Mbed-TLS/mbedtls/blob/mbedtls-2.28/include/mbedtls/config.h#L2134
[lwip-altcp-tls]: https://github.com/lwip-tcpip/lwip/tree/master/src/apps/altcp_tls
[gh-lwip-pr]: https://github.com/lwip-tcpip/lwip/pull/47/commits/c53c9d02036be24a461d2998053a52991e65b78e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,12 +87,23 @@ target_include_directories(
     #
     PRIVATE ${CMAKE_CURRENT_LIST_DIR}
 
+    # Mbed TLS port includes
+    #
+    #   Internal headers for the Mbed TLS port provided with lwIP. They are not
+    #   typically in the pre-processor search path, but are required when using
+    #   underlying Mbed TLS interfaces not exposed by the Mbed TLS port (more
+    #   specifically, casting for an `mbedtls_ssl_set_hostname` call for Server
+    #   Name Indication TLS extension configuration).
+    #
+    #   See the `connect_to_host` function in `picohttps.c` for details.
+    #
+    ${PICO_LWIP_PATH}/src/apps/altcp_tls/
+
 )
 
 # Configure linker
 #
 #   To link (statically) to additional libraries files (i.e. external to Pico SDK)
-#
 #
 #   https://cmake.org/cmake/help/latest/command/target_link_libraries.html
 #
